--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
    --color-black5:#6B7280;
    /* padding */
    --padding-uno:0px 2rem;
+   /* font */
    --font-primary:"Etna", sans-serif;
    /* shadow */
    --shadow-shadow1: 4px 4px 0px 0px var(--color-blue);
@@ -68,3 +69,16 @@ background-color: var(--color-peach);
  .gellatio{
   font-family: "Gellatio";
  }
+
+    @media (prefers-reduced-motion: reduce) {
+     .animated-element {
+       /* Disable animations */
+       transition: none !important;
+     }
+   }
+
+   @media screen and (max-width:1024px) {
+    @theme{
+         --padding-uno:0px 0px;
+    }
+   }
