Dashboard with Subject Lessons
Dashboard with Subject Lessons

--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,8 @@
     --color-white3: #fcf6f2;
     --color-white4: rgba(255, 255, 255, 0.8);
     --color-white5: #99ffffff;
+    /* green color */
+    --color-green1:#569b44
     /* padding */
     --padding-uno:0px 2rem;
     /* font */
